--- a/contact-tracing-app/android/app/src/main/res/values/google_maps_api.xml
+++ b/contact-tracing-app/android/app/src/main/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">(AIzaSyBVtSaDm9goHMgN4a_HdImVKy3QXE-2n4s)</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">(API KEY HERE)</string>
 </resources>
